# onlyoffice-telegram

./: .env.docker.example  .env_example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
app/: __init__.py
app/commands/: __init__.py  commands.py
app/description/: __init__.py  description.py
app/filters/: __init__.py  chat_group_filter.py  document_edit_filter.py  document_name_filter.py  document_type_filter.py  is_not_reply_filter.py  not_command_filter.py  supported_convert_formats_filter.py
app/fsm/: __init__.py  menu_state.py
app/handlers/: __init__.py  back_router.py  cancel_router.py  convert_router.py  create_router.py  edit_router.py  help_router.py  lang_router.py  start_router.py
app/keyboards/: __init__.py  make_buttons.py  make_keyboard.py  make_lang_buttons.py
app/middlewares/: __init__.py  antiflood.py  lang.py
app/routes/: __init__.py  create_file.py  editor.py  get_config.py  get_file.py  get_locales.py  send_file.py
app/utils/: file_utils.py  format_utils.py  jwt_utils.py  lang_utils.py
locales/: messages.pot
locales/de/LC_MESSAGES/: messages.mo  messages.po
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/es/LC_MESSAGES/: messages.mo  messages.po
locales/fr/LC_MESSAGES/: messages.mo  messages.po
locales/it/LC_MESSAGES/: messages.mo  messages.po
locales/static/: editor.html
static/: editor.html
(+10 files in other folders)
