[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "onlyoffice-telegram"
version = "0.0.0"  # Placeholder
description = "ONLYOFFICE integration bot for Telegram allows working with office files directly within Telegram"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "ONLYOFFICE",
    "Telegram",
]
authors = [{ name = "Ascensio System SIA", email = "integration@onlyoffice.com" }]
dependencies = [
    "aiogram==3.15.0",
    "aiogram-i18n==1.4",
    "aiohttp==3.10.5",
    "babel==2.16.0",
    "Jinja2==3.1.4",
    "PyJWT==2.9.0",
    "python-dotenv==1.0.1",
    "redis==5.0.8",
]

[project.optional-dependencies]
dev = ["pre-commit==4.0.1"]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
ignore = ["F401"]

[tool.black]
line-length = 120
